--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,14 @@ dependencies:
   flutter_datetime_picker_plus: ^2.2.0
   firebase_messaging_platform_interface: ^4.5.46
   flutter_local_notifications: ^17.2.3
+  fl_chart: ^0.69.0
+  number_text_input_formatter: ^1.0.0+8
+  flutter_masked_text2: ^0.9.1
+  google_maps_flutter: ^2.9.0
+  flutter_google_places: ^0.3.0
+  provider: ^6.1.2
+  theme_provider: ^0.6.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
